tests/NormalTests/paczka1/small_fuzzy/16697393.err
Error in line 9: k5Rmx A756 15,0
Error in line 7: tFbe A756 61,7
